# GameOfLife

./: CMakeLists.txt  README.md
Header Files/: Application.h  GameOfLife.h  Random.h
Source Files/: Application.cpp  GameOfLife.cpp  main.cpp
